--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,11 @@
 body {
     margin: 0px;
     font-family: 'Roboto', sans-serif;
-    background: url("../imgs/kotori.png");
+    background: url("../imgs/woodman.png");
     background-repeat: no-repeat;
     background-position: right bottom 49px, left bottom;
-    background-size: 800px 800px, auto;
+    /*background-size: 800px 800px, auto;*/
+    background-size: auto;
     background-attachment: fixed;
 }
 header {
