--- a/style.css
+++ b/style.css
@@ -1,78 +1,514 @@
-:root{
-  --title-bg-color: #E54B4B;
-  --main-bg-color: #F7EBE8;
-  --highlight-bg-color: #444140;
+:root {
+  --primary-color: #f0afc5;
+  --secondary-color: #fffcfc;
+  --secondary-color-light: white;
+  --secondary-color-dark: #444140;
+  --primary-text-color: black;
+  --primary-color-light: #e990ae;
 }
 
+/* Page */
 * {
-  box-sizing: border-box;
+  /* font-family: "Roboto", sans-serif; */
+  font-family: "Lato", sans-serif;
+  /* font-family: "Montserrat", sans-serif; */
 }
-
-body{
-  font-family: 'Roboto', sans-serif;
-  background-color: var(--main-bg-color);
+html {
+  font-size: 15px;
+  color: var(--primary-text-color);
+}
+body {
+  background-color: var(--secondary-color);
   margin: 0;
-  color: var(--highlight-bg-color);
-}
-
-.center{
-  justify-content: center;
   text-align: center;
+  font-size: 1.68rem;
+}
+footer {
+  background-color: var(--secondary-color-dark);
+  color: var(--secondary-color);
+  height: 2em;
+  line-height: 2em;
+}
+.page-divider {
+  border-bottom: var(--primary-color) solid 1em;
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
 }
 
-h1{
-  font-size: 2em;
+/* Headers */
+h1 {
+  font-size: 5rem;
+  border-left: solid 8px;
+  border-color: var(--primary-color-light);
+  padding-left: 0.5em;
 }
-
-a{
-  text-decoration: none;
+h2 {
+  padding: 1em 0 1em 0;
 }
-
-.box{
-  background-color: var(--main-bg-color);
-  padding: 20px 0px 20px 0px;
+#header {
+  background-color: var(--primary-color);
+}
+#header-info {
+  text-align: left;
+  margin: 1em;
+  width: 1000px;
+}
+.page-container h2 {
+  /* border: var(--highlight-bg-color) solid 4px; */
+  display: inline-block;
+  padding: 0.25em 0.5em;
+  position: relative;
+  z-index: 2;
+}
+.page-container h2::before {
+  position: absolute;
+  content: "";
+  border-right: var(--primary-text-color) solid 4px;
+  border-bottom: var(--primary-text-color) solid 4px;
+  width: calc(100% + 10px);
+  height: calc(100% + 4px);
+  bottom: 0px;
+  right: 0px;
+  z-index: -1;
+}
+.page-container h2::after {
+  position: absolute;
+  content: "";
+  border-left: var(--primary-text-color) solid 3px;
+  border-top: var(--primary-text-color) solid 3px;
+  width: calc(100% + 10px);
+  height: calc(100% - 12px);
+  top: 0px;
+  left: 0px;
+  z-index: -1;
+}
+.header-title {
+  display: inline-flex;
+  flex-wrap: wrap;
+  align-items: baseline;
+}
+.header-title h1 {
+  margin-right: 1em;
+}
+.header-contact-icons {
+  background-color: var(--secondary-color);
   display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  gap: 1em;
+  padding: 0.25em;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
 }
-
-.header{
-  background-color: var(--title-bg-color);
-  height: 70%;
+.header-contact-icons a {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+}
+.header-contact-icons a img {
+  margin: 0;
 }
 
-.header h1{
-  font-size: 5em;
-  margin-bottom: 0;
-}
-
-.header ul{
-  text-align: center;
-}
-
-.no-padding{
+/* Lists */
+ul {
+  margin: 0;
   padding: 0;
 }
-
-li{
+ul.inline li {
+  display: inline;
+}
+li {
   list-style: none;
 }
 
-ul{
+/* Nav */
+nav {
+  background-color: var(--secondary-color-dark);
+  color: var(--secondary-color);
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+nav div {
+  position: relative;
+  display: flex;
+  height: 1.5em;
+  line-height: 1.5em;
+  padding: 0.5em 1em;
+  cursor: pointer;
+  text-align: center;
+}
+nav div:hover::after {
+  content: "";
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  background-color: var(--primary-color);
+}
+
+/* Icons */
+.contact-icon {
+  height: 2em;
+  margin-left: 0.25em;
+  margin-right: 0.25em;
+}
+.tech-icon-big {
+  max-height: 4em;
+  max-width: 4em;
+  margin-left: 0.25em;
+  margin-right: 0.25em;
+}
+
+/* Texts */
+.font-smaller {
+  font-size: smaller;
+}
+a {
+  text-decoration: none;
+  color: var(--primary-text-color);
+}
+.experience-info {
+  color: gray;
+  margin-bottom: 0;
+  font-size: smaller;
+}
+#email {
+  padding-top: 1em;
+}
+.text-divider {
+  color: var(--primary-color-light);
+  user-select: none;
+}
+.job-title-link {
+  text-decoration: none;
+  display: flex;
+}
+.job-title-link:hover {
+  text-decoration: underline;
+}
+.job-title-link:visited {
+  color: inherit;
+}
+.tech-icon-title {
+  text-align: center;
+  margin-top: 0.5em;
+}
+.project-links {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1em;
+}
+.project-link {
+  display: inline-block;
+  color: var(--primary-text-color);
+  padding: 0.25em 0.5em;
+  border: var(--secondary-color-dark) solid 2px;
+  border-radius: 4px;
+}
+.project-link:hover {
+  border-color: var(--primary-color);
+  color: var(--primary-color);
+}
+.project-icon-link {
+  display: flex;
+  justify-content: center;
+}
+.project-title {
+  color: var(--primary-text-color);
+  margin: 0.5em 0;
+  text-align: center;
+}
+
+/* Containers */
+.row {
+  display: flex;
+  flex-direction: row;
+}
+.col {
+  display: flex;
+  flex-direction: column;
+}
+.center {
+  display: flex;
+  justify-content: center;
+}
+.end {
+  display: flex;
+  justify-content: end;
+}
+.page-container {
+  padding: 2em;
+}
+#contact-box {
+  position: relative;
+  align-self: end;
+  z-index: 0;
+}
+#contact-box .shadow-box {
+  margin: 0;
+  /* background-color: var(--secondary-color); */
+}
+#skill-boxes {
+  justify-content: center;
+  display: flex;
+}
+#skill-boxes div div {
+  width: 250px;
+}
+.shadow-box {
+  margin: 1em;
+  padding: 1em 2em;
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+  border: solid lightgray 1px;
+  border-radius: 0.5em;
+  background-color: var(--secondary-color-light);
+}
+.experience-box {
+  position: relative;
+  display: flex;
+  text-align: start;
+  flex-direction: column;
+  max-width: 900px;
+}
+.card-info {
+  position: absolute;
+  margin: 1em;
+  top: 0;
+  right: 0;
+}
+.project-thumbnail {
+  position: relative;
+  width: 390px;
+  height: 300px;
+}
+.project-thumbnail-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
   padding: 0;
+  margin: 0;
+  border-bottom: var(--primary-color) solid 2px;
+  filter: brightness(99%) saturate(70%);
 }
-
-ol{
+.project-box {
+  display: flex;
+  flex-direction: column;
   padding: 0;
+  max-width: 390px;
+  background-color: var(--secondary-color-light);
+  border: solid lightgray 1px;
+  font-size: smaller;
 }
-
-.about{
-  background-color: var(--highlight-bg-color);
-  color: var(--main-bg-color);
+.project-info {
+  color: gray;
+  font-size: smaller;
+  margin-top: 0;
 }
-
+.bg-primary-light {
+  background-color: var(--primary-color-light);
+}
+.project-thumbnail-hover {
+  position: relative;
+  align-items: center;
+  height: 100%;
+  color: var(--secondary-color);
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.hidden {
+  visibility: hidden;
+}
+.project-thumbnail:hover .hidden {
+  visibility: visible;
+}
+.project-thumbnail-button {
+  font-weight: bolder;
+  font-size: larger;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 0.25em 0.5em;
+  margin: 0.5em;
+  border: var(--primary-color) solid 3px;
+  border-radius: 1em;
+  color: var(--primary-color);
+}
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  height: 100vh;
+  width: 100vw;
+  z-index: 10;
+  overflow: hidden;
+}
+.modal-bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 3;
+}
+.modal-body {
+  border-top: var(--primary-color) solid 10px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  margin: 3em;
+  max-width: 900px;
+  background-color: var(--secondary-color);
+  padding: 1em 2em;
+  z-index: 4;
+}
+.project-video {
+  position: relative;
+  height: 0;
+  padding-bottom: 59.25%;
+}
+.project-video iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10;
+}
+.sticky + .page-container {
+  padding-top: calc(63px + 2em);
+}
+.skills-box {
+  text-align: left;
+  width: 900px;
+}
+.skill-texts {
+  gap: 0.25em 1em;
+  flex-wrap: wrap;
+  margin-bottom: 0.5em;
+}
+.skill-texts h3 {
+  width: 100%;
+  height: 1em;
+  font-size: smaller;
+  border-color: var(--primary-text-color);
+  border-bottom: solid 2px;
+  margin-bottom: 0.5em;
+}
+.skill-img {
+  width: auto;
+  height: 1em;
+  margin-right: 5px;
+}
+.skill-text {
+  display: flex;
+}
+.project-category-title {
+  font-size: smaller;
+  width: 100%;
+  text-align: left;
+  border-bottom: var(--primary-text-color) solid 2px;
+}
+.projects-box {
+  width: 1189px;
+}
+.project-boxes {
+  gap: 0.25em 0.25em;
+  flex-wrap: wrap;
+  margin-bottom: 1em;
+  justify-content: center;
+}
+#pduck {
+  position: absolute;
+  top: -71px;
+  left: 45px;
+  width: 149px;
+  z-index: -1;
+}
+.slideshow {
+  position: relative;
+  width: 100%;
+  /* height: 518px; */
+  user-select: none;
+}
+.slide {
+  display: none;
+  width: 100%;
+}
+.slide.active {
+  display: inherit;
+}
+.slide-dots {
+  text-align: center;
+  /* border-top: var(--primary-color) solid 3px; */
+  padding-top: 0.5em;
+}
+.slide-dot {
+  height: 15px;
+  width: 30px;
+  margin: 0;
+  background-color: #bbb;
+  border-radius: 1em;
+  display: inline-block;
+}
+.slide-dot.active {
+  background-color: var(--primary-text-color);
+}
+.slideshow-prev {
+  position: absolute;
+  padding: 0;
+  left: 0;
+  top: 0;
+  width: 50%;
+  height: calc(100% - 1.25em);
+  cursor: pointer;
+  opacity: 60%;
+}
+.slideshow-next {
+  position: absolute;
+  padding: 0;
+  top: 0;
+  right: 0;
+  width: 50%;
+  height: calc(100% - 1.25em);
+  cursor: pointer;
+  opacity: 60%;
+}
+.arrow {
+  position: absolute;
+  padding: 1em;
+  top: calc(50% - 1.5em);
+  background-color: var(--primary-color);
+  font-weight: bold;
+  user-select: none;
+}
+.slideshow-prev .arrow {
+  left: 0;
+  border-radius: 0 1em 1em 0;
+}
+.slideshow-next .arrow {
+  right: 0;
+  border-radius: 1em 0 0 1em;
+}
+.slideshow-prev:hover,
+.slideshow-next:hover {
+  opacity: 100%;
+}
+.project-description {
+  text-align: start;
+  background-color: var(--secondary-color-light);
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+  border-left: 4px solid var(--primary-color);
+  padding: 1em;
+  margin-top: 1em;
+}
+.project-description li {
+  list-style: circle;
+  list-style-position: inside;
+}
