--- a/style.css
+++ b/style.css
@@ -1,529 +1,434 @@
-/*#region --------------- text --------------- */
-/*#endregion */
-
-/*#region --------------- Color Palette --------------- */
 :root {
-  --primary-color: #f0afc5;
-  --secondary-color: #fffcfc;
-  --secondary-color-light: white;
-  --secondary-color-dark: #444140;
-  --primary-text-color: black;
-  --primary-color-light: #e990ae;
+  --background-color: #fdfdfd;
+  --background-primary: #f0afc5;
+  --background-primary-secondary: #ffe8f3;
+
+  --text-primary: black;
+  --text-secondary: #505050;
+  --text-on-primary: #31152f;
+
+  --link-primary: #c4426e;
+
+  --border-color: #e0e0e0;
+
+  --paper-texture-uri: url("assets/paper-texture.png");
+
+  --spacing1: 4px;
+  --spacing2: 8px;
+  --spacing3: 16px;
+  --spacing4: 32px;
 }
-/*#endregion */
 
 /*#region --------------- Basic Elements --------------- */
-* {
-  /* font-family: "Roboto", sans-serif; */
-  font-family: "Lato", sans-serif;
-  /* font-family: "Montserrat", sans-serif; */
-}
-html {
-  font-size: 15px;
-  color: var(--primary-text-color);
-}
 body {
-  background-color: var(--secondary-color);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: var(--text-primary);
+  background-color: var(--background-color);
   margin: 0;
-  text-align: center;
-  font-size: 1.68rem;
 }
-footer {
-  background-color: var(--secondary-color-dark);
-  color: var(--secondary-color);
-  height: 2em;
-  line-height: 2em;
-}
-h1 {
-  font-size: 5rem;
-  border-left: solid 8px;
-  border-color: var(--primary-color-light);
-  padding-left: 0.5em;
-}
-h2 {
-  padding: 1em 0 1em 0;
-}
-ul {
-  margin: 0;
-  padding: 0;
-}
-li {
-  list-style: none;
-}
-nav {
-  background-color: var(--secondary-color-dark);
-  color: var(--secondary-color);
-  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+
+header {
   display: flex;
-  flex-direction: row;
   justify-content: center;
+  background-color: var(--background-primary);
+  padding: 5rem 1rem;
+}
 
-  div {
-    position: relative;
-    display: flex;
-    height: 1.5em;
-    line-height: 1.5em;
-    padding: 0.5em 1em;
-    cursor: pointer;
-    text-align: center;
-  }
-  div:hover::after {
-    content: "";
-    position: absolute;
-    height: 3px;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    background-color: var(--primary-color);
-  }
-}
-a {
-  text-decoration: none;
-  color: var(--primary-text-color);
-}
-/*#endregion */
-
-/*#region --------------- Layout --------------- */
-.row {
-  display: flex;
-  flex-direction: row;
-}
-.col {
+section {
   display: flex;
   flex-direction: column;
+  padding: var(--spacing4);
 }
-.center {
-  display: flex;
-  justify-content: center;
-}
-.end {
-  display: flex;
-  justify-content: end;
-}
-.inline {
-  display: inline;
-}
-.page-container {
-  padding: 2em;
 
-  h2 {
-    /* border: var(--highlight-bg-color) solid 4px; */
-    display: inline-block;
-    padding: 0.25em 0.5em;
+footer {
+  height: 2rem;
+  line-height: 2rem;
+}
+
+a {
+  text-decoration: none;
+  color: var(--link-primary);
+
+  &:visited {
+    color: var(--link-primary);
+  }
+
+  &:hover {
+    color: var(--background-primary);
+  }
+}
+
+span,
+p {
+  &.secondary {
+    color: var(--text-secondary);
+  }
+}
+
+/*#endregion */
+
+.name-card {
+  position: relative;
+  text-align: center;
+  align-self: center;
+  margin: 1rem;
+
+  &::before {
+    position: absolute;
+    pointer-events: none;
+    content: "";
+    border-radius: 2px;
+    border-right: 4px solid var(--background-primary-secondary);
+    border-bottom: 4px solid var(--background-primary-secondary);
+    opacity: .25;
+    width: 25%;
+    height: 25%;
+    bottom: 0;
+    right: 0;
+    margin: -.75rem;
+  }
+
+  &::after {
+    position: absolute;
+    pointer-events: none;
+    content: "";
+    border-radius: 2px;
+    border-left: 4px solid var(--background-primary-secondary);
+    border-top: 4px solid var(--background-primary-secondary);
+    opacity: .25;
+    width: 25%;
+    height: 25%;
+    top: 0;
+    left: 0;
+    margin: -.75rem;
+  }
+
+  h1 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: transparent;
+    background-color: var(--text-on-primary);
+    text-shadow: 2px 2px 3px #fffcfc7f;
+    background-clip: text;
+    padding-top: .5em;
+  }
+
+  .background {
+    position: absolute;
+    background-image: var(--paper-texture-uri);
+    background-size: 45%;
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    opacity: 75%;
+    pointer-events: none;
+    z-index: 1;
+  }
+
+  .card-body {
     position: relative;
-    z-index: 2;
   }
-  h2::before {
-    position: absolute;
-    content: "";
-    border-right: var(--primary-text-color) solid 4px;
-    border-bottom: var(--primary-text-color) solid 4px;
-    width: calc(100% + 10px);
-    height: calc(100% + 4px);
-    bottom: 0px;
-    right: 0px;
-    z-index: -1;
-  }
-  h2::after {
-    position: absolute;
-    content: "";
-    border-left: var(--primary-text-color) solid 3px;
-    border-top: var(--primary-text-color) solid 3px;
-    width: calc(100% + 10px);
-    height: calc(100% - 12px);
-    top: 0px;
-    left: 0px;
-    z-index: -1;
-  }
-}
-/*#endregion */
 
-/*#region --------------- Custom Components --------------- */
-.page-divider {
-  border-bottom: var(--primary-color) solid 1em;
-  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
-}
-.text-divider {
-  color: var(--primary-color-light);
-  user-select: none;
-}
-/*#endregion */
+  .card-footer {
+    padding: .5rem;
+    background-color: var(--background-primary-secondary);
 
-/*#region --------------- Text Fonts --------------- */
-.font-smaller {
-  font-size: smaller;
-}
-/*#endregion */
-
-/*#region --------------- Page Header --------------- */
-.page-header {
-  background-color: var(--primary-color);
-}
-.header-info {
-  text-align: left;
-  margin: 1em;
-  width: 1000px;
-}
-.header-title {
-  display: inline-flex;
-  flex-wrap: wrap;
-  align-items: baseline;
-  margin-right: 1em;
-}
-.header-contact-icons {
-  background-color: var(--secondary-color);
-  display: flex;
-  flex-direction: row;
-  gap: 1em;
-  padding: 0.25em;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
-
-  a {
-    display: flex;
-
-    img {
-      margin: 0;
-      height: 2em;
+    .social-links {
+      display: flex;
+      flex-direction: row;
+      gap: 1rem;
+      justify-content: center;
     }
   }
 }
-/*#endregion */
 
-/*#region --------------- Page Navbar --------------- */
+.experience-cards {
+  flex-wrap: wrap;
+  gap: var(--spacing2);
+  max-width: 1000px;
+  align-self: center;
 
-/*#endregion */
+  .experience-card {
+    flex: 1;
+  }
 
-/* Icons */
-.tech-icon-big {
-  max-height: 4em;
-  max-width: 4em;
-  margin-left: 0.25em;
-  margin-right: 0.25em;
+  .experience-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: .5rem;
+    margin-bottom: 1rem;
+
+    img {
+      height: 3rem;
+    }
+
+    h2 {
+      margin: 0;
+      text-wrap: nowrap;
+    }
+
+    span {
+      font-size: smaller;
+      color: var(--text-secondary);
+    }
+  }
+
+  .description {
+    font-size: smaller;
+  }
 }
 
-.experience-box {
-  position: relative;
-  display: flex;
-  text-align: start;
-  flex-direction: column;
-  max-width: 900px;
-}
-.experience-info {
-  color: gray;
-  margin-bottom: 0;
-  font-size: smaller;
-}
-#email {
-  padding-top: 1em;
-}
-
-.job-title-link {
-  text-decoration: none;
-  display: flex;
-}
-.job-title-link:hover {
-  text-decoration: underline;
-}
-.job-title-link:visited {
-  color: inherit;
-}
-.tech-icon-title {
-  text-align: center;
-  margin-top: 0.5em;
-}
-.project-links {
+.project-cards {
   display: flex;
   flex-wrap: wrap;
-  gap: 1em;
-}
-.project-link {
-  display: inline-block;
-  color: var(--primary-text-color);
-  padding: 0.25em 0.5em;
-  border: var(--secondary-color-dark) solid 2px;
-  border-radius: 4px;
-}
-.project-link:hover {
-  border-color: var(--primary-color);
-  color: var(--primary-color);
-}
-.project-icon-link {
-  display: flex;
-  justify-content: center;
-}
-.project-title {
-  color: var(--primary-text-color);
-  margin: 0.5em 0;
-  text-align: center;
+  gap: var(--spacing3);
+  align-self: center;
+  max-width: 1500px;
 }
 
-/* Containers */
-
-#contact-box {
-  position: relative;
-  align-self: end;
-  z-index: 0;
-}
-#contact-box .shadow-box {
-  margin: 0;
-  /* background-color: var(--secondary-color); */
-}
-#skill-boxes {
-  justify-content: center;
-  display: flex;
-}
-#skill-boxes div div {
-  width: 250px;
-}
-.shadow-box {
-  margin: 1em;
-  padding: 1em 2em;
-  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
-  border: solid lightgray 1px;
-  border-radius: 0.5em;
-  background-color: var(--secondary-color-light);
-}
-.card-info {
-  position: absolute;
-  margin: 1em;
-  top: 0;
-  right: 0;
-}
-.project-thumbnail {
-  position: relative;
-  width: 390px;
-  height: 300px;
-}
-.project-thumbnail-image {
-  position: absolute;
+.project-divider {
   width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  padding: 0;
-  margin: 0;
-  border-bottom: var(--primary-color) solid 2px;
-  filter: brightness(99%) saturate(70%);
+  height: 1px;
+  margin: var(--spacing1) var(--spacing4);
+  background-color: var(--border-color);
 }
-.project-box {
+
+project-card {
+  display: flex;
+  flex: 1;
+
+  a[slot='project-git'] img {
+    height: 100%;
+    position: absolute;
+  }
+}
+
+.project-card {
+  flex: 1;
+
+  .project-header {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: var(--spacing2);
+    margin-bottom: .5em;
+    justify-content: space-between;
+
+    h2 {
+      margin: 0;
+      text-wrap: nowrap;
+      position: relative;
+    }
+
+    a {
+      height: 2em;
+      position: relative;
+      display: flex;
+    }
+  }
+
+  .card-body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card-thumbnail {
+    filter: grayscale(50%);
+  }
+}
+
+.card {
+  display: flex;
+  border-radius: 2px;
+  background-color: var(--background-color);
+
+  &.shadow {
+    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+  }
+
+  &.border {
+    border: 1px solid var(--border-color);
+  }
+
+  .card-body {
+    flex: 1;
+    margin: 1rem;
+  }
+
+  .card-thumbnail {
+    display: flex;
+    width: 250px;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
+  }
+}
+
+.icon-link {
+  display: flex;
+  align-items: end;
+  gap: var(--spacing1);
+
+  img {
+    display: inline;
+    max-height: 1em;
+  }
+
+  span {
+    font-size: smaller;
+  }
+}
+
+.badges {
+  display: inline-flex;
+  gap: var(--spacing1);
+  flex-wrap: wrap;
+}
+
+.badge {
+  display: inline-block;
+  text-align: center;
+  color: var(--text-on-primary);
+  background-color: var(--background-primary);
+  border-radius: 2px;
+  padding: .25rem .5rem .25rem .5rem;
+  font-size: small;
+  font-weight: 600;
+  line-height: 1;
+  text-wrap: nowrap;
+
+  &.secondary {
+    color: inherit;
+    background-color: var(--background-primary-secondary);
+  }
+
+  &.archived {
+    color: var(--text-primary);
+    background-color: var(--border-color);
+  }
+}
+
+.fancy-title {
+  position: relative;
+  align-self: center;
+  padding: 0.5rem 1rem;
+  margin-bottom: 2em;
+
+  &::before {
+    position: absolute;
+    pointer-events: none;
+    content: "";
+    border-right: 4px solid;
+    border-bottom: 4px solid;
+    width: calc(100% + 10px);
+    height: calc(100% + 4px);
+    bottom: 0;
+    right: 0;
+  }
+
+  &::after {
+    position: absolute;
+    pointer-events: none;
+    content: "";
+    border-left: 3px solid;
+    border-top: 3px solid;
+    width: calc(100% + 10px);
+    height: calc(100% - 12px);
+    top: 0;
+    left: 0;
+  }
+}
+
+.flex {
+  display: flex;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+
+  &.reverse {
+    flex-direction: row-reverse;
+  }
+}
+
+.col {
   display: flex;
   flex-direction: column;
-  padding: 0;
-  max-width: 390px;
-  background-color: var(--secondary-color-light);
-  border: solid lightgray 1px;
-  font-size: smaller;
+
+  &.reverse {
+    flex-direction: column-reverse;
+  }
 }
-.project-info {
-  color: gray;
-  font-size: smaller;
-  margin-top: 0;
+
+.collapsed {
+  visibility: collapse;
 }
-.bg-primary-light {
-  background-color: var(--primary-color-light);
+
+.hover-pop {
+  transition: all .1s ease-in;
+
+  &:hover {
+    scale: 1.2;
+    transition: all .1s ease-out;
+  }
 }
-.project-thumbnail-hover {
-  position: relative;
-  align-items: center;
-  height: 100%;
-  color: var(--secondary-color);
-  cursor: pointer;
-  background-color: rgba(0, 0, 0, 0.7);
+
+img.hover-pop {
+  &:hover {
+    opacity: .5;
+  }
 }
-.hidden {
-  visibility: hidden;
-}
-.project-thumbnail:hover .hidden {
-  visibility: visible;
-}
-.project-thumbnail-button {
-  font-weight: bolder;
-  font-size: larger;
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 0.25em 0.5em;
-  margin: 0.5em;
-  border: var(--primary-color) solid 3px;
-  border-radius: 1em;
-  color: var(--primary-color);
-}
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  height: 100vh;
-  width: 100vw;
-  z-index: 10;
+
+
+/* #region ----------------- Image Popup ---------------------- */
+.popup-open {
   overflow: hidden;
 }
-.modal-bg {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  z-index: 3;
-}
-.modal-body {
-  border-top: var(--primary-color) solid 10px;
-  border-radius: 5px;
+
+.image-popup {
   display: flex;
-  flex-direction: column;
-  overflow: auto;
-  margin: 3em;
-  max-width: 900px;
-  background-color: var(--secondary-color);
-  padding: 1em 2em;
-  z-index: 4;
-}
-.project-video {
-  position: relative;
-  height: 0;
-  padding-bottom: 59.25%;
-}
-.project-video iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
   z-index: 10;
+
+  &:hover {
+    cursor: zoom-in;
+  }
+
+  &.open {
+    &:hover {
+      cursor: zoom-out;
+    }
+
+    .popup-background {
+      position: fixed;
+      width: 100vw;
+      height: 100vh;
+      top: 0;
+      left: 0;
+      background-color: var(--color-background);
+      opacity: .75;
+    }
+
+    img {
+      z-index: 11;
+      transition: all .1s ease-in;
+    }
+  }
+
+  .popup-background {
+    width: 0;
+    height: 0;
+  }
+
+  img {
+    max-width: 100%;
+    max-height: 100%;
+    user-select: none;
+    transition: all .1s ease-out;
+  }
 }
-.sticky + .page-container {
-  padding-top: calc(63px + 2em);
-}
-.skills-box {
-  text-align: left;
-  width: 900px;
-}
-.skill-texts {
-  gap: 0.25em 1em;
-  flex-wrap: wrap;
-  margin-bottom: 0.5em;
-}
-.skill-texts h3 {
-  width: 100%;
-  height: 1em;
-  font-size: smaller;
-  border-color: var(--primary-text-color);
-  border-bottom: solid 2px;
-  margin-bottom: 0.5em;
-}
-.skill-img {
-  width: auto;
-  height: 1em;
-  margin-right: 5px;
-}
-.skill-text {
-  display: flex;
-}
-.project-category-title {
-  font-size: smaller;
-  width: 100%;
-  text-align: left;
-  border-bottom: var(--primary-text-color) solid 2px;
-}
-.projects-box {
-  width: 1189px;
-}
-.project-boxes {
-  gap: 0.25em 0.25em;
-  flex-wrap: wrap;
-  margin-bottom: 1em;
-  justify-content: center;
-}
-#pduck {
-  position: absolute;
-  top: -71px;
-  left: 45px;
-  width: 149px;
-  z-index: -1;
-}
-.slideshow {
-  position: relative;
-  width: 100%;
-  /* height: 518px; */
-  user-select: none;
-}
-.slide {
-  display: none;
-  width: 100%;
-}
-.slide.active {
-  display: inherit;
-}
-.slide-dots {
-  text-align: center;
-  /* border-top: var(--primary-color) solid 3px; */
-  padding-top: 0.5em;
-}
-.slide-dot {
-  height: 15px;
-  width: 30px;
-  margin: 0;
-  background-color: #bbb;
-  border-radius: 1em;
-  display: inline-block;
-}
-.slide-dot.active {
-  background-color: var(--primary-text-color);
-}
-.slideshow-prev {
-  position: absolute;
-  padding: 0;
-  left: 0;
-  top: 0;
-  width: 50%;
-  height: calc(100% - 1.25em);
-  cursor: pointer;
-  opacity: 60%;
-}
-.slideshow-next {
-  position: absolute;
-  padding: 0;
-  top: 0;
-  right: 0;
-  width: 50%;
-  height: calc(100% - 1.25em);
-  cursor: pointer;
-  opacity: 60%;
-}
-.arrow {
-  position: absolute;
-  padding: 1em;
-  top: calc(50% - 1.5em);
-  background-color: var(--primary-color);
-  font-weight: bold;
-  user-select: none;
-}
-.slideshow-prev .arrow {
-  left: 0;
-  border-radius: 0 1em 1em 0;
-}
-.slideshow-next .arrow {
-  right: 0;
-  border-radius: 1em 0 0 1em;
-}
-.slideshow-prev:hover,
-.slideshow-next:hover {
-  opacity: 100%;
-}
-.project-description {
-  text-align: start;
-  background-color: var(--secondary-color-light);
-  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
-  border-left: 4px solid var(--primary-color);
-  padding: 1em;
-  margin-top: 1em;
-}
-.project-description li {
-  list-style: circle;
-  list-style-position: inside;
-}
+
+/* #endregion */
