--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@
 
 /*#region --------------- Basic Elements --------------- */
 body {
-  position: relative;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: var(--text-primary);
   background-color: var(--background-color);
@@ -30,13 +29,18 @@ body {
 
   &::after {
     content: "";
-    position: absolute;
+    position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-image: var(--noise-texture-uri);
     opacity: .7;
     z-index: -1;
+  }
+
+  &.popup-open {
+    overflow: hidden;
   }
 }
 
@@ -139,8 +143,6 @@ p {
   }
 
   .card-body {
-    position: relative;
-
     p {
       line-height: 1.5em;
     }
@@ -214,11 +216,6 @@ p {
 project-card {
   display: flex;
   flex: 1;
-
-  a[slot='project-git'] img {
-    height: 100%;
-    position: absolute;
-  }
 }
 
 .project-card {
@@ -234,12 +231,10 @@ project-card {
     h2 {
       margin: 0;
       text-wrap: nowrap;
-      position: relative;
     }
 
     a {
       height: 2em;
-      position: relative;
       display: flex;
     }
   }
@@ -250,7 +245,19 @@ project-card {
   }
 
   .card-thumbnail {
-    filter: grayscale(50%);
+    img {
+      filter: grayscale(50%);
+
+      &:hover {
+        filter: none;
+      }
+    }
+
+    &.image-popup.open {
+      img {
+        filter: none;
+      }
+    }
   }
 }
 
@@ -273,10 +280,12 @@ project-card {
   }
 
   .card-thumbnail {
+    position: relative;
     display: flex;
     width: 250px;
 
     img {
+      position: absolute;
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -401,37 +410,31 @@ img.hover-pop {
   }
 }
 
-/* #region ----------------- Image Popup ---------------------- */
-.popup-open {
-  overflow: hidden;
-}
-
 .image-popup {
   display: flex;
-  z-index: 10;
-
-  &:hover {
-    cursor: zoom-in;
-  }
+  cursor: zoom-in;
 
   &.open {
-    &:hover {
-      cursor: zoom-out;
-    }
+    cursor: zoom-out;
+    z-index: 100;
 
     .popup-background {
       position: fixed;
+      cursor: zoom-out;
       width: 100vw;
       height: 100vh;
       top: 0;
       left: 0;
-      background-color: var(--color-background);
       opacity: .75;
+      background-color: var(--background-color);
     }
 
     img {
-      z-index: 11;
-      transition: all .1s ease-in;
+      user-select: none;
+      width: 80vw;
+      height: 80vh;
+      object-fit: contain;
+      transition: all .1s ease-out;
     }
   }
 
@@ -441,11 +444,7 @@ img.hover-pop {
   }
 
   img {
-    max-width: 100%;
-    max-height: 100%;
     user-select: none;
-    transition: all .1s ease-out;
+    transition: all .1s ease-in;
   }
 }
-
-/* #endregion */
